syntax = "proto3";

option java_package = "smr.shop.libs.grpc.object";
option java_multiple_files = true;

message ProductStockGrpcId{
  string id = 1;
}